--- a/Components/GetCaseAndDocumentInfo.xaml
+++ b/Components/GetCaseAndDocumentInfo.xaml
@@ -10,7 +10,7 @@
   <VisualBasic.Settings>
     <x:Null />
   </VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>1228,1264</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1161,1083</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>GetCaseAndDocumentInfo_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -97,7 +97,7 @@
       <AssemblyReference>System.Memory.Data</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="GetCaseAndDocumentInfo" sap:VirtualizedContainerService.HintSize="496,1199" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="GetCaseAndDocumentInfo" sap:VirtualizedContainerService.HintSize="496,1018" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="Token" />
       <Variable x:TypeArguments="x:String" Name="CaseUuid" />
@@ -116,41 +116,21 @@
     </ui:InvokeWorkflowFile>
     <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="GetCaseUuid.xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="434,113" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_1" UnSafe="False" WorkflowFileName="Components\GetCaseUuid.xaml">
       <ui:InvokeWorkflowFile.Arguments>
-        <InArgument x:TypeArguments="x:String" x:Key="in_CaseNumber">
-          <VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_CaseNumber" />
-        </InArgument>
-        <OutArgument x:TypeArguments="x:String" x:Key="out_CaseUuid">
-          <VisualBasicReference x:TypeArguments="x:String" ExpressionText="CaseUuid" />
-        </OutArgument>
-        <InArgument x:TypeArguments="x:String" x:Key="in_Token">
-          <VisualBasicValue x:TypeArguments="x:String" ExpressionText="Token" />
-        </InArgument>
-        <OutArgument x:TypeArguments="x:String" x:Key="out_CaseTitle">
-          <VisualBasicReference x:TypeArguments="x:String" ExpressionText="CaseTitle" />
-        </OutArgument>
-        <InArgument x:TypeArguments="x:String" x:Key="in_KMDNovaURL">
-          <VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_KMDNovaURL" />
-        </InArgument>
+        <InArgument x:TypeArguments="x:String" x:Key="in_CaseNumber">[in_CaseNumber]</InArgument>
+        <OutArgument x:TypeArguments="x:String" x:Key="out_CaseUuid">[CaseUuid]</OutArgument>
+        <InArgument x:TypeArguments="x:String" x:Key="in_Token">[Token]</InArgument>
+        <OutArgument x:TypeArguments="x:String" x:Key="out_CaseTitle">[CaseTitle]</OutArgument>
+        <InArgument x:TypeArguments="x:String" x:Key="in_KMDNovaURL">[in_KMDNovaURL]</InArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
     <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="GetDocumentInfo_New.xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="434,113" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_5" UnSafe="False" WorkflowFileName="Components\GetDocumentInfo_New.xaml">
       <ui:InvokeWorkflowFile.Arguments>
-        <InArgument x:TypeArguments="x:String" x:Key="in_CaseNumber">
-          <VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_CaseNumber" />
-        </InArgument>
-        <InArgument x:TypeArguments="x:String" x:Key="in_Token">
-          <VisualBasicValue x:TypeArguments="x:String" ExpressionText="Token" />
-        </InArgument>
-        <InArgument x:TypeArguments="x:String" x:Key="in_CaseUuid">
-          <VisualBasicValue x:TypeArguments="x:String" ExpressionText="CaseUuid" />
-        </InArgument>
-        <OutArgument x:TypeArguments="sd:DataTable" x:Key="out_dt_CaseAndDocumentInfo">
-          <VisualBasicReference x:TypeArguments="sd:DataTable" ExpressionText="dt_CaseAndDocumentInfo" />
-        </OutArgument>
+        <InArgument x:TypeArguments="x:String" x:Key="in_CaseNumber">[in_CaseNumber]</InArgument>
+        <InArgument x:TypeArguments="x:String" x:Key="in_Token">[Token]</InArgument>
+        <InArgument x:TypeArguments="x:String" x:Key="in_CaseUuid">[CaseUuid]</InArgument>
+        <OutArgument x:TypeArguments="sd:DataTable" x:Key="out_dt_CaseAndDocumentInfo">[dt_CaseAndDocumentInfo]</OutArgument>
         <InArgument x:TypeArguments="x:String" x:Key="BreakTriggerScopeInArgument" />
-        <InArgument x:TypeArguments="x:String" x:Key="in_KMDNovaURL">
-          <VisualBasicValue x:TypeArguments="x:String" ExpressionText="in_KMDNovaURL" />
-        </InArgument>
+        <InArgument x:TypeArguments="x:String" x:Key="in_KMDNovaURL">[in_KMDNovaURL]</InArgument>
       </ui:InvokeWorkflowFile.Arguments>
     </ui:InvokeWorkflowFile>
     <Assign sap:VirtualizedContainerService.HintSize="434,82" sap2010:WorkflowViewState.IdRef="Assign_1">
@@ -185,6 +165,5 @@
         <InArgument x:TypeArguments="x:String">[Token]</InArgument>
       </Assign.Value>
     </Assign>
-    <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="434,141" sap2010:WorkflowViewState.IdRef="LogMessage_1" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;Anvender følgende CaseID fra KMDNova: &quot; + out_CaseID]" />
   </Sequence>
 </Activity>
