--- a/Components/SendDocumentsToFilarkiv.xaml
+++ b/Components/SendDocumentsToFilarkiv.xaml
@@ -7,7 +7,7 @@
   <VisualBasic.Settings>
     <x:Null />
   </VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>932,2471</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>1161,2379</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>SendDocumentsToFilarkiv_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <sco:Collection x:TypeArguments="x:String">
@@ -107,7 +107,7 @@
       <AssemblyReference>System.Memory.Data</AssemblyReference>
     </sco:Collection>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="SendDocumentsToFilarkiv" sap:VirtualizedContainerService.HintSize="668,2406" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="SendDocumentsToFilarkiv" sap:VirtualizedContainerService.HintSize="668,2314" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="RequestVerification" />
       <Variable x:TypeArguments="x:String" Name="LogonWebSession" />
@@ -125,14 +125,14 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <If sap2010:Annotation.AnnotationText="If-statement, som tjekker om der er nogen sager at overfører til FilArkiv. Hvis der ikke er dette, går robotten videre til næste sag. " Condition="[in_dt_CaseAndDocumentInfo.RowCount &gt;0]" sap:VirtualizedContainerService.HintSize="606,2295" sap2010:WorkflowViewState.IdRef="If_2">
+    <If sap2010:Annotation.AnnotationText="If-statement, som tjekker om der er nogen sager at overfører til FilArkiv. Hvis der ikke er dette, går robotten videre til næste sag. " Condition="[in_dt_CaseAndDocumentInfo.RowCount &gt;0]" sap:VirtualizedContainerService.HintSize="606,2203" sap2010:WorkflowViewState.IdRef="If_2">
       <sap:WorkflowViewStateService.ViewState>
         <scg:Dictionary x:TypeArguments="x:String, x:Object">
           <x:Boolean x:Key="IsAnnotationDocked">True</x:Boolean>
         </scg:Dictionary>
       </sap:WorkflowViewStateService.ViewState>
       <If.Then>
-        <Sequence sap:VirtualizedContainerService.HintSize="572,2071" sap2010:WorkflowViewState.IdRef="Sequence_13">
+        <Sequence sap:VirtualizedContainerService.HintSize="572,1979" sap2010:WorkflowViewState.IdRef="Sequence_13">
           <sap:WorkflowViewStateService.ViewState>
             <scg:Dictionary x:TypeArguments="x:String, x:Object">
               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
@@ -164,15 +164,9 @@
           </ui:CommentOut>
           <ui:InvokeWorkflowFile ArgumentsVariable="{x:Null}" ContinueOnError="{x:Null}" DisplayName="GetKMDWebInfo.xaml - Invoke Workflow File" sap:VirtualizedContainerService.HintSize="530,113" sap2010:WorkflowViewState.IdRef="InvokeWorkflowFile_7" UnSafe="False" WorkflowFileName="GetKMDWebInfo.xaml">
             <ui:InvokeWorkflowFile.Arguments>
-              <OutArgument x:TypeArguments="x:String" x:Key="out_LogonWebSession">
-                <VisualBasicReference x:TypeArguments="x:String" ExpressionText="LogonWebSession" />
-              </OutArgument>
-              <OutArgument x:TypeArguments="x:String" x:Key="out_RequestVerification">
-                <VisualBasicReference x:TypeArguments="x:String" ExpressionText="RequestVerification" />
-              </OutArgument>
-              <OutArgument x:TypeArguments="x:String" x:Key="out_VerificationToken">
-                <VisualBasicReference x:TypeArguments="x:String" ExpressionText="VerificationToken" />
-              </OutArgument>
+              <OutArgument x:TypeArguments="x:String" x:Key="out_LogonWebSession">[LogonWebSession]</OutArgument>
+              <OutArgument x:TypeArguments="x:String" x:Key="out_RequestVerification">[RequestVerification]</OutArgument>
+              <OutArgument x:TypeArguments="x:String" x:Key="out_VerificationToken">[VerificationToken]</OutArgument>
             </ui:InvokeWorkflowFile.Arguments>
           </ui:InvokeWorkflowFile>
           <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="530,141" sap2010:WorkflowViewState.IdRef="LogMessage_6" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[&quot;Overfører antal rækker: &quot; + in_dt_CaseAndDocumentInfo.RowCount.ToString]" />
@@ -257,24 +251,6 @@
               </scg:Dictionary>
             </sap:WorkflowViewStateService.ViewState>
           </Assign>
-          <ui:CommentOut DisplayName="Comment Out" sap:VirtualizedContainerService.HintSize="530,52" sap2010:WorkflowViewState.IdRef="CommentOut_9">
-            <ui:CommentOut.Body>
-              <Sequence DisplayName="Ignored Activities" sap:VirtualizedContainerService.HintSize="450,252" sap2010:WorkflowViewState.IdRef="Sequence_15">
-                <sap:WorkflowViewStateService.ViewState>
-                  <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                    <x:Boolean x:Key="IsExpanded">True</x:Boolean>
-                  </scg:Dictionary>
-                </sap:WorkflowViewStateService.ViewState>
-                <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="388,141" sap2010:WorkflowViewState.IdRef="LogMessage_2" Level="[UiPath.Core.Activities.LogLevel.Info]" Message="[finalString]" />
-              </Sequence>
-            </ui:CommentOut.Body>
-            <sap:WorkflowViewStateService.ViewState>
-              <scg:Dictionary x:TypeArguments="x:String, x:Object">
-                <x:Boolean x:Key="IsExpanded">False</x:Boolean>
-                <x:Boolean x:Key="IsPinned">False</x:Boolean>
-              </scg:Dictionary>
-            </sap:WorkflowViewStateService.ViewState>
-          </ui:CommentOut>
           <ui:InvokeCode ContinueOnError="{x:Null}" sap2010:Annotation.AnnotationText="Kode som sender dokumenterne som mangler at blive overført  til FilArkiv. Hvis der findes flere dokumenter, sendes disse som et &quot;batch&quot;" Code="var client = new RestClient(&quot;https://capwebwlbs-wm2q2012.kmd.dk/KMDNovaESDH/api/ServiceRelayer/kmdnova/v1/publicarchive/submission&quot;);&#xA;client.Timeout = -1;&#xA;var request = new RestRequest(Method.POST);&#xA;request.AddHeader(&quot;Accept&quot;, &quot;application/json, text/plain, */*&quot;);&#xA;request.AddHeader(&quot;Accept-Language&quot;, &quot;en-US,en;q=0.9&quot;);&#xA;request.AddHeader(&quot;Connection&quot;, &quot;keep-alive&quot;);&#xA;request.AddHeader(&quot;Content-Type&quot;, &quot;application/json;charset=UTF-8&quot;);&#xA;request.AddHeader(&quot;Origin&quot;, &quot;https://capwebwlbs-wm2q2012.kmd.dk&quot;);&#xA;request.AddHeader(&quot;RequestVerificationToken&quot;, RequestVerification);&#xA;request.AddHeader(&quot;Sec-Fetch-Dest&quot;, &quot;empty&quot;);&#xA;request.AddHeader(&quot;Sec-Fetch-Mode&quot;, &quot;cors&quot;);&#xA;request.AddHeader(&quot;Sec-Fetch-Site&quot;, &quot;same-origin&quot;);&#xA;client.UserAgent = &quot;Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/117.0.0.0 Safari/537.36 Edg/117.0.2045.60&quot;;&#xA;request.AddHeader(&quot;X-Requested-With&quot;, &quot;XMLHttpRequest&quot;);&#xA;request.AddHeader(&quot;sec-ch-ua&quot;, &quot;\&quot;Microsoft Edge\&quot;;v=\&quot;117\&quot;, \&quot;Not;A=Brand\&quot;;v=\&quot;8\&quot;, \&quot;Chromium\&quot;;v=\&quot;117\&quot;&quot;);&#xA;request.AddHeader(&quot;sec-ch-ua-mobile&quot;, &quot;?0&quot;);&#xA;request.AddHeader(&quot;sec-ch-ua-platform&quot;, &quot;\&quot;Windows\&quot;&quot;);&#xA;request.AddCookie(&quot;kmdNovaIndstillingerCurrent&quot;, &quot;MTM-Byggeri&quot;);&#xA;request.AddCookie(&quot;__RequestVerificationToken_L0tNRE5vdmFFU0RI0&quot;, VerificationToken);&#xA;request.AddCookie(&quot;KMDLogonWebSessionHandler&quot;, LogonWebSession);&#xA;//var body = &quot;{\&quot;CaseId\&quot;:\&quot;&quot;+CaseId+&quot;\&quot;,\&quot;CaseNumber\&quot;:\&quot;&quot;+CaseNumber+&quot;\&quot;,\&quot;Provider\&quot;:\&quot;FilArkiv\&quot;,\&quot;Documents\&quot;:[{\&quot;DocumentId\&quot;:\&quot;&quot;+DocumentId+&quot;\&quot;,\&quot;DocumentNumber\&quot;:\&quot;&quot;+DocumentNumber+&quot;\&quot;}]}&quot;;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#x9;&#xA;var body = &quot;{\&quot;CaseId\&quot;:\&quot;&quot;+CaseId+&quot;\&quot;,\&quot;CaseNumber\&quot;:\&quot;&quot;+CaseNumber+&quot;\&quot;,\&quot;Provider\&quot;:\&quot;FilArkiv\&quot;,\&quot;Documents\&quot;:[&quot;+FinalString+&quot;]}&quot;;&#xA;request.AddParameter(&quot;application/json;charset=UTF-8&quot;, body,  ParameterType.RequestBody);&#xA;IRestResponse response = client.Execute(request);&#xA;ResponseOut = response.Content;" DisplayName="Invoke Code" sap:VirtualizedContainerService.HintSize="530,222" sap2010:WorkflowViewState.IdRef="InvokeCode_1" Language="CSharp">
             <ui:InvokeCode.Arguments>
               <InArgument x:TypeArguments="x:String" x:Key="VerificationToken">[VerificationToken]</InArgument>
